--- a/CSS-fundamentals/CSS/card.css
+++ b/CSS-fundamentals/CSS/card.css
@@ -31,3 +31,29 @@ Removing margin-bottom so as to override that default margin. */
     margin-top: 40px;
     margin-bottom: 0;
 }
+
+strong {
+    background: yellow;
+    color: black;
+}
+
+.accent-color {
+    color: yellow;
+}
+
+/* --- Link Pseudoclasses ---  */ 
+a:link {
+    color: yellow;
+}
+
+a:focus {
+    color: #d9ff00;
+}
+
+a:hover {
+    color: teal;
+}
+
+a:visited {
+    color: #ffbb00;
+}
