--- a/CSS-fundamentals/CSS/card.css
+++ b/CSS-fundamentals/CSS/card.css
@@ -1,6 +1,7 @@
 
 /* Used the "auto" value for the left/right margin in order to horizontally
 center my 560px width card */
+
 .card {
     background: #000;
     color: white;
@@ -9,10 +10,12 @@ center my 560px width card */
     padding: 45px;
 }
 
+
 /* This selector targets typography elements and defines their top margin
  to be 0. This allows the padding on its parent element to dictate the spacing.
  Since it is global, I placed it above the typography-specific element selectors for
  organization purposes */
+
 h1, p {
     margin-top: 0;
 }
@@ -25,8 +28,10 @@ p {
     font-size: 18px;
 }
 
+
 /* Spacing the links further from the p type than the p type is to the h1.
 Removing margin-bottom so as to override that default margin. */
+
 .links {
     margin-top: 40px;
     margin-bottom: 0;
@@ -41,8 +46,10 @@ strong {
     color: yellow;
 }
 
+
 /* --- Link Pseudoclasses ---  */ 
-a:link {
+
+a:link, a:visited {
     color: yellow;
 }
 
@@ -52,8 +59,4 @@ a:focus {
 
 a:hover {
     color: teal;
-}
-
-a:visited {
-    color: #ffbb00;
 }
