--- a/CSS-fundamentals/CSS/card.css
+++ b/CSS-fundamentals/CSS/card.css
@@ -18,6 +18,7 @@ center my 560px width card */
 
 h1, p {
     margin-top: 0;
+    font-family: Helvetica;
 }
 
 h1 {
@@ -57,16 +58,19 @@ a:hover {
     color: #d9ff00;
 }
 
-
 .button {
     background-color: #ffe600;
     color: black;
+    text-decoration: none;
+    display: inline-block;
     padding: 20px;
     font-weight: bold;
-    margin-bottom: 20px;
+    margin: 0 25px 0 0;
 }
 
 .button:focus,
 .button:hover {
-    color: grey;
+    background-color: orange;
+    color: black;
+    text-decoration: underline;
 }
