--- a/CSS-fundamentals/CSS/compound-selectors.css
+++ b/CSS-fundamentals/CSS/compound-selectors.css
@@ -1,23 +1,72 @@
 /* --- Element Selectors --- */ 
 
-h1, p {
-    margin-top: 0;
+body {
+    margin: 10px 0 0 0;
+}
+
+header {
+    background-color: yellow;
+    color: black;
+    border: 2px black solid;
+    width: 560px;
+    margin: 0 auto;
+    padding: 35px;
+}
+
+h1, h2, p {
+    margin: 0 0;
+    font-family: "Open Sans", Helvetica;
 }
 
 h1 {
     font-size: 24px;
+    font-weight: 800;
+    text-align: center;
+}
+
+h2 {
+    font-size: 24px;
+    margin-bottom: 15px;
 }
 
 p {
     font-size: 18px;
+    margin-bottom: 25px;
 }
 
 a {
     color: #FFE600;
+    font-weight: 700;
+}
+
+a:focus, 
+a:hover {
+    color: red;
 }
 
 /* --- Class Selectors --- */
 
+.section-one {
+    background-color: black;
+    color: white;
+    border: 2px black solid;
+    width: 560px;
+    margin: 0 auto;
+    padding: 35px;
+}
+
+.section-two {
+    background-color: white;
+    color: black;
+    border: 2px black solid;
+    width: 560px;
+    margin: 0 auto;
+    padding: 35px;
+}
+
+.links {
+    margin-bottom: 0;
+}
 .btn {
     display: inline-block;
     padding: 20px;
@@ -47,6 +96,15 @@ a {
 .section-two .btn:hover {
     background-color: gray;
     text-decoration: underline;
+}
+
+.section-two a {
+    color: darkblue;
+}
+
+.section-two a:focus, 
+.section-two a:hover {
+    color: purple;
 }
 
 /* --- ID Selectors --- */
