--- a/CSS-fundamentals/CSS/css-fundamentals.css
+++ b/CSS-fundamentals/CSS/css-fundamentals.css
@@ -40,11 +40,6 @@ a {
     font-weight: 400;
 }
 
-a:focus,
-a:hover {
-    color: red;
-    font-weight: 900;
-}
 
 /* --- Class Selectors --- */ 
 
@@ -72,12 +67,15 @@ a:hover {
 .video-buttom {
     border: red solid 2px;
     border-radius: 4px;
-    padding: 2px 10px;
-    margin-right: 10px;
+    padding: 2px 10px 1px 10px;
+    margin: 0 10px;
+}
+.btns {
+    padding: 25px 0 0;
 }
 
 .btn {
-   /* display: inline-block; */
+    display: inline-block; 
     padding: 15px 25px;
     text-align: center;
     text-decoration: none;
@@ -95,13 +93,20 @@ a:hover {
     margin: 0 10px;
 }
 
-.btn-default:focus,
-.btn-default:hover {
+.default:focus,
+.default:hover {
     background-color:white;
     color: #ef5839;
 }
 
-.btn-mod:focus,
-.btn-mod:hover {
+.mod:focus,
+.mod:hover {
+    background-color: grey;
+    color: #fff;
+}
 
+a:focus,
+a:hover {
+    color: red;
+    font-weight: 900;
 }
