--- a/CSS-fundamentals/CSS/css-fundamentals.css
+++ b/CSS-fundamentals/CSS/css-fundamentals.css
@@ -1,8 +1,10 @@
-/* --- Element Selectors --- */ 
+/* --- Global --- */
 
 body {
     margin: 0 auto;
     font-family: "Lato", sans-serif;
+    font-size: 18px;
+    color: #2e354f;
 }
 
 header {
@@ -13,6 +15,15 @@ header {
 h1, h2, p {
     margin: 0;
 }
+
+h1,
+h2,
+strong {
+    font-weight: 900;
+}
+
+
+/* --- Typography --- */ 
 
 h1 {
     font-size: 36px;
@@ -27,12 +38,7 @@ h2 {
 }
 
 p {
-    font-size: 18px;
     margin: 0 auto 25px;
-}
-
-img {
-    margin: 0 0 25px 0;
 }
 
 a {
@@ -40,29 +46,13 @@ a {
     font-weight: 400;
 }
 
-
-/* --- Class Selectors --- */ 
-
-.section-one {
-    background-color: #fff;
-    padding: 35px 0; 
+a:focus,
+a:hover {
+    color: red;
+    font-weight: 900;
 }
 
-
-.center {
-    width: 620px;
-    margin: 0 auto;
-}
-
-.section-two {
-    background-color: #2e354f;
-    padding: 35px;
-    color: #fff;
-}
-
-.nounderline {
-    text-decoration: none;
-}
+/* --- Buttons --- */
 
 .video-buttom {
     border: red solid 2px;
@@ -70,14 +60,16 @@ a {
     padding: 2px 10px 1px 10px;
     margin: 0 10px;
 }
+
+/*
 .btns {
     padding: 25px 0 0;
 }
+*/
 
 .btn {
     display: inline-block; 
     padding: 15px 25px;
-    text-align: center;
     text-decoration: none;
     font-weight: 900;
 }
@@ -95,7 +87,7 @@ a {
 
 .default:focus,
 .default:hover {
-    background-color:white;
+    background-color:grey;
     color: #ef5839;
 }
 
@@ -105,8 +97,28 @@ a {
     color: #fff;
 }
 
-a:focus,
-a:hover {
-    color: red;
-    font-weight: 900;
+
+/* --- Layout --- */ 
+
+img {
+    margin: 0 0 25px 0;
+}
+
+section {
+    padding: 35px 0; 
+}
+
+
+.center {
+    width: 620px;
+    margin: 0 auto;
+}
+
+.section-two {
+    background-color: #2e354f;
+    color: #fff;
+}
+
+.nounderline {
+    text-decoration: none;
 }
