--- a/CSS-fundamentals/CSS/css-fundamentals.css
+++ b/CSS-fundamentals/CSS/css-fundamentals.css
@@ -7,10 +7,7 @@ body {
     color: #2e354f;
 }
 
-header {
-    background-color: #2e354f;
-    padding: 45px 0;
-}
+ 
 
 h1, h2, p {
     margin: 0;
@@ -100,18 +97,20 @@ a:hover {
 
 /* --- Layout --- */ 
 
-img {
-    margin: 0 0 25px 0;
+header {
+    background-color: #2e354f;
+    padding: 45px 0;
 }
 
 section {
     padding: 35px 0; 
 }
 
-
-.center {
-    width: 620px;
+.container {
+    width: 90%;
+    max-width: 620px;
     margin: 0 auto;
+    border: 2px violet solid;
 }
 
 .section-two {
